--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^22.14.0",
     "nodemon": "^3.1.9",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "zod": "^3.24.3"
   }
 }
