--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,13 @@
   "author": "Roman Tokmin",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@types/node": "^22.14.0",
+    "eslint": "^9.26.0",
+    "globals": "^16.0.0",
     "nodemon": "^3.1.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
     "zod": "^3.24.3"
