--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/node": "^22.14.0",
+    "@types/pg": "^8.15.1",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
@@ -20,6 +21,7 @@
     "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
+    "pg": "^8.15.6",
     "zod": "^3.24.3"
   }
 }
