--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/node": "^22.14.0",
+    "@types/node-schedule": "^2.1.7",
     "@types/pg": "^8.15.1",
     "eslint": "^9.26.0",
     "globals": "^16.0.0",
@@ -21,6 +22,7 @@
     "typescript-eslint": "^8.31.1"
   },
   "dependencies": {
+    "node-schedule": "^2.1.1",
     "pg": "^8.15.6",
     "zod": "^3.24.3"
   }
