Добавлен typescript на клиент

--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@types/node": "^22.15.30",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
