--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@types/node": "^22.15.30",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
-    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,6 +36,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "typescript": "^4.6.4",
+    "tailwindcss": "^3.4.17",
+    "@types/node": "^22.15.30",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6"
   }
 }
