--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./client
     ports:
       - "80:3000"
+    depends_on:
+      - tbm-server
 
   tbm-server:
     container_name: tbm-server
@@ -15,12 +17,14 @@ services:
       - "3020:3020"
     environment:
       TZ: ${TZ}
-      HOST: ${HOST:-0.0.0.0}
+      ALLOWED_HOST: ${ALLOWED_HOST:-0.0.0.0}
       PG_HOST: ${PG_HOST:-db}
       PG_PORT: ${PG_PORT:-5432}
       PG_USERNAME: ${PG_USERNAME:-postgres}
       PG_PASSWORD: ${PG_PASSWORD:-mypassword}
       PG_DATABASE: ${PG_DATABASE:-telegram_bot_manager}
+    depends_on:
+      - db
 
   db:
     image: postgres:17
